--- a/html/CartoonLIVE.html
+++ b/html/CartoonLIVE.html
@@ -8,7 +8,7 @@
 <title>Player</title>
 <script src="https://cdn.jsdelivr.net/npm/clappr@0.3.4/dist/clappr.min.js"></script>
 <style>
-#player {
+#ctnbra {
 position: absolute;
 top: 0;
 left: 0;
